--- a/challenge1/index.html
+++ b/challenge1/index.html
@@ -1,26 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <title>CSS challenge</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- NAV BAR - DON'T TOUCH ME -->
     <div class="w3-bar w3-black">
-        <a href="/index.html" class="w3-bar-item w3-button">Home</a>
-        <a href="/challenge1/index.html" class="w3-bar-item w3-button">challenge 1</a>
-        <a href="/challenge2/index.html" class="w3-bar-item w3-button">challenge 2</a>
-        <a href="/challenge3/index.html" class="w3-bar-item w3-button">challenge 3</a>
-        <a href="/challenge4/index.html" class="w3-bar-item w3-button">challenge 4</a>
+      <a href="/index.html" class="w3-bar-item w3-button">Home</a>
+      <a href="/challenge1/index.html" class="w3-bar-item w3-button"
+        >challenge 1</a
+      >
+      <a href="/challenge2/index.html" class="w3-bar-item w3-button"
+        >challenge 2</a
+      >
+      <a href="/challenge3/index.html" class="w3-bar-item w3-button"
+        >challenge 3</a
+      >
+      <a href="/challenge4/index.html" class="w3-bar-item w3-button"
+        >challenge 4</a
+      >
+
+      <h1 class="title">Harry Potter</h1>
     </div>
 
     <!-- YOUR CODE DOWN HERE  -->
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
-</body>
+    <div class="imageborder">
+      <img
+        class="image"
+        src="/Users/danah/Development/TASK-css-challenge/assets/harrypotter.jpg"
+      />
+    </div>
 
+    <div class="Titleborder">
+      <h1 class="Title">harry potter & the philsopher's stone</h1>
+      <p class="Title1">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio commodi
+        harum quia dolor numquam beatae nihil voluptatum, hic dicta aut neque
+        animi dolorum natus accusamus suscipit? Dolore nobis ut natus.
+      </p>
+    </div>
+  </body>
 </html>
